Hello World in WPF

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFHelloWorld"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="Hello World Window" Height="450" Width="800">
+    <StackPanel>
+        <Label>Hello World!</Label>
+        <Button Content="Click Me"/>
+    </StackPanel>
 </Window>
