--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,6 +8,9 @@
         Title="Hello World Window" Height="450" Width="800">
     <StackPanel>
         <Label>Hello World!</Label>
-        <Button Content="Click Me"/>
+        <Button 
+            x:Name="myButton" 
+            Content="Click Me" 
+        ></Button>
     </StackPanel>
 </Window>
