--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,21 +6,18 @@
         xmlns:local="clr-namespace:WPFHelloWorld"
         mc:Ignorable="d"
         Title="Hello World Window" Height="450" Width="800">
-    <Grid>
-        <Label 
-            Margin="16, 16, 16, 0" 
-            BorderThickness="1" 
-            BorderBrush="Black"
-        >
-            <StackPanel Orientation="Horizontal">
-                <Image 
-                    Width="100" 
-                    Height="50"
-                    Source="https://thumbs.dreamstime.com/b/mail-symbol-icon-blue-gradient-rounded-corners-isolated-vector-illustration-mail-symbol-icon-blue-gradient-rounded-138998808.jpg" 
-                />
-                <AccessText FontSize="32" Text="Message">
-                </AccessText>
-            </StackPanel>
-        </Label>
-    </Grid>
+    <StackPanel>
+        <TextBox 
+            FontSize="30" 
+            Margin="50" 
+            AcceptsReturn="True"
+            TextWrapping="Wrap"
+            SpellCheck.IsEnabled="True"
+            Language="en-US"
+            Background="Aqua"
+            Foreground="Brown"
+            Text="Hello World!"
+            IsReadOnly="False"
+        />
+    </StackPanel>
 </Window>
