--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,28 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFHelloWorld"
         mc:Ignorable="d"
-        Title="Hello World Window" Height="200" Width="400">
-    <StackPanel Margin="10" VerticalAlignment="Center">
-        <Slider
-            x:Name="mySlider"
-            Maximum="100" 
-            Minimum="0"
-            TickPlacement="BottomRight"
-            TickFrequency="10"
-            IsSnapToTickEnabled="True"
-            Value="20"
-            ValueChanged="mySlider_ValueChanged"
-        >
-        </Slider>
-        <TextBlock 
-            x:Name="myTextBlock"
-            FontSize="{
-                Binding ElementName=mySlider, 
-                Path=Value,
-                UpdateSourceTrigger=PropertyChanged
-            }"
-        >
-            Hello World!
-        </TextBlock>
+        Title="Hello World Window" Height="400" Width="300">
+    <StackPanel>
+        <Viewbox Stretch="Fill">
+            <Calendar 
+                x:Name="myCalendar"
+                DisplayMode="Month"
+                SelectedDatesChanged="myCalendar_SelectedDatesChanged"
+            >
+                <Calendar.BlackoutDates>
+                    <CalendarDateRange Start="03/01/2025" End="03/05/2025"/>
+                </Calendar.BlackoutDates>
+            </Calendar>
+        </Viewbox>
+        <TextBlock x:Name="myTextBlock"></TextBlock>
     </StackPanel>
 </Window>
